2009-04-26  Michael Banck  <mbanck@gmx.net>

	* src/formats/moldenformat.cpp (WriteMolecule): New method,
	implementing atom coordinates and vibrations.  Set flags() to
	WRITEONEONLY for now.

	* src/formats/moldenformat.cpp (ReadMolecule): Do not care about case
	of vibration header tag for the displacements.  MOLPRO writes
	upper-case "Vibration", Molden writes lower-case "vibration".

2009-04-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/obiter.h (OpenBabel): Add forward declaration
	of OBRing and OBRingData suggested by Anton Simakov.

2009-04-22  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/rotor.h: #ifndef SWIG added due to problems
	compiling the CSharp bindings

2009-04-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/Makefile.am: Fix some conditional compiles. Should
	help fix compile problem reported with 2.2.1 on Cygwin by Igor
	Filippov.

2009-04-21  Noel O'Boyle  <baoilleach@gmail.com>

	* src/obiter.cpp: Bugfix for off-by-one error in OBMolAtomBFSIter.

2009-04-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ops/gen3d.cpp: Use ConjugateGradients for the final
	optimization to give improved coords.

	* src/bond.cpp (SetLength): Fix bug uncovered by Marshall
	Levesque. When two atoms are at the same position, move slightly
	to prevent invalid (NaN) coordinates.

	* src/builder.cpp: New code for handling 2D molecules, spurred in
	part by a request by Marshall. Uses and improves on code from Avogadro.

	* configure.in, configure, CMakeLists.txt: Bump version number to 2.2.2b1.

2009-04-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/qchemformat.cpp (ReadMolecule): Fix tokenize mistake
	when reading Q-Chem vibrational intensities.

2009-04-11  Michael Banck  <mbanck@gmx.net>

	* src/formats/outformat.cpp (ReadMolecule): Added MOLPRO output
	file detection.

2009-04-08  Geoffrey Hutchison  <babel@geoffhutchison.net>
